syntax = "proto3";

package raft;

option go_package = "./proto";

// Raft service definition
service RaftService {
  // RequestVote RPC - used during leader election
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
  
  // AppendEntries RPC - used for log replication and heartbeats
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
  
  // InstallSnapshot RPC - used for snapshot installation
  rpc InstallSnapshot(InstallSnapshotRequest) returns (InstallSnapshotResponse);
}

// RequestVote RPC structures
message RequestVoteRequest {
  int64 term = 1;           // candidate's term
  string candidate_id = 2;   // candidate requesting vote
  int64 last_log_index = 3;  // index of candidate's last log entry
  int64 last_log_term = 4;   // term of candidate's last log entry
}

message RequestVoteResponse {
  int64 term = 1;         // current term, for candidate to update itself
  bool vote_granted = 2;  // true means candidate received vote
}

// AppendEntries RPC structures
message AppendEntriesRequest {
  int64 term = 1;              // leader's term
  string leader_id = 2;        // so follower can redirect clients
  int64 prev_log_index = 3;    // index of log entry immediately preceding new ones
  int64 prev_log_term = 4;     // term of prev_log_index entry
  repeated LogEntry entries = 5; // log entries to store (empty for heartbeat)
  int64 leader_commit = 6;     // leader's commit_index
}

message AppendEntriesResponse {
  int64 term = 1;    // current term, for leader to update itself
  bool success = 2;  // true if follower contained entry matching prev_log_index and prev_log_term
  int64 conflict_index = 3;  // index of conflicting entry (for optimization)
  int64 conflict_term = 4;   // term of conflicting entry (for optimization)
}

// InstallSnapshot RPC structures
message InstallSnapshotRequest {
  int64 term = 1;              // leader's term
  string leader_id = 2;        // so follower can redirect clients
  int64 last_included_index = 3; // the snapshot replaces all entries up through and including this index
  int64 last_included_term = 4;  // term of last_included_index
  int64 offset = 5;            // byte offset where chunk is positioned in the snapshot file
  bytes data = 6;              // raw bytes of the snapshot chunk, starting at offset
  bool done = 7;               // true if this is the last chunk
}

message InstallSnapshotResponse {
  int64 term = 1;  // current term, for leader to update itself
}

// Log entry structure
message LogEntry {
  int64 term = 1;     // term when entry was received by leader
  int64 index = 2;    // index of this entry in the log
  string command = 3; // command type (PUT, DELETE, etc.)
  bytes data = 4;     // command data
}

// Additional message types for cluster management

message NodeInfo {
  string id = 1;
  string address = 2;
  string state = 3;
  int64 term = 4;
}

message ClusterStatus {
  string leader_id = 1;
  int64 term = 2;
  repeated NodeInfo nodes = 3;
  int64 commit_index = 4;
}
